desktop fullscreen, freeze gamestate on textbox

--- a/model/Makefile
+++ b/model/Makefile
@@ -6,4 +6,4 @@ OBJ_HEADERS := $(patsubst src/%.obj,%_obj.h,$(OBJ_FILES))
 all: $(OBJ_HEADERS)
 
 %_obj.h: src/%.obj
-	./gen-model.py -m $< $@
+	python3 gen-model.py -m $< $@
