minor renaming, restructed how resources are handled and built

--- a/font/Makefile
+++ b/font/Makefile
@@ -6,4 +6,4 @@ TTF_HEADERS := $(patsubst src/%.ttf,%_ttf.h,$(TTF_FILES))
 all: $(TTF_HEADERS)
 
 %_ttf.h: src/%.ttf
-	bin2header -o $@ $<
+	xxd -i -n $(notdir $<) $< $@
