--- a/img/Makefile
+++ b/img/Makefile
@@ -6,4 +6,4 @@ PNG_HEADERS := $(patsubst src/%.png,%_png.h,$(PNG_FILES))
 all: $(PNG_HEADERS)
 
 %_png.h: src/%.png
-	bin2header -o $@ $<
+	xxd -i -n $(notdir $<) $< $@
