--- a/shader/Makefile
+++ b/shader/Makefile
@@ -6,6 +6,4 @@ SHADER_HEADERS := $(patsubst src/%.glsl,%_glsl.h,$(SHADER_FILES))
 all: $(SHADER_HEADERS)
 
 %_glsl.h: src/%.glsl
-	bin2header -o $@.tmp $<
-	sed -e "s/const//g" $@.tmp > $@
-	rm $@.tmp
+	xxd -i -n $(notdir $<) $< $@
